added code to show testimonials

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -69,6 +69,7 @@
     
     @Scripts.Render("~/Scripts/jquery/jquery-1.9.0.min.js")
     @Scripts.Render("~/Scripts/jquery/jquery-ui-1.10.0.js")
+    @Scripts.Render("~/Scripts/jquery/jquery.quovolver.min.js")
     <script>window.jQuery || document.write('<script src="Scripts/jquery/jquery-1.9.0.min.js"><\/script>')</script>
     @Scripts.Render("~/Scripts/jquery/jquery.validate.min.js")
     @Scripts.Render("~/Scripts/jquery/jquery.validate.unobtrusive.min.js")
