added caret to menu; removed testimonials

--- a/Web/Views/Services/CourtReporting.cshtml
+++ b/Web/Views/Services/CourtReporting.cshtml
@@ -23,45 +23,45 @@
             <p>Paragraph 2</p>
 
             <div id="accordion">
-                <h3>Depositions</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px solid #bec792">Depositions</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>Trials</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">Trials</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>Hearings</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">Hearings</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>Arbitrations</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">Arbitrations</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>City Council Meetings</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">City Council Meetings</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>Expert Testimony</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">Expert Testimony</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>Independent medical examinations (IME)</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">Independent medical examinations (IME)</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>Examinations under oath</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">Examinations under oath</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>Statements on the record</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">Statements on the record</h3>
                 <div>
                     <p>Content Goes Here</p>
                 </div>
-                <h3>Depositions</h3>
+                <h3 style="background-color:#bec792;font-weight:bold;border: 0px">Prison inmate depositions</h3>
                 <div>
-                    <p>Prison inmate depositions</p>
+                    <p>Content Goes Here</p>
                 </div>
             </div>
         </div>
