--- a/Web/Content/custom/layout.css
+++ b/Web/Content/custom/layout.css
@@ -327,6 +327,10 @@ aside li {
 	padding-left: 30px;
 }
 
+.time{
+    padding-left: 10px;
+}
+
 /* #Page Styles - INTERIOR PAGE
 ================================================== */
 
