--- a/Web/Views/Home/ContactUs.cshtml
+++ b/Web/Views/Home/ContactUs.cshtml
@@ -8,8 +8,17 @@
 
 @section scripts
 {
-    @Scripts.Render("~/Scripts/qqr.contactus.js")
+    @Scripts.Render("~/bundles/ContactJS")
     @Styles.Render("~/Content/Themes/base/minified/jquery-ui.min.css")
+}
+
+@section HeadInfo
+{   
+    <meta name="viewport" content="width=device-width" />
+    <meta name="keywords" content="Court Reporting, Court Reporters, Legal Videos, Process Server" />
+    <meta name="description" content="Court Reporters, Legal Videographers and Trial Services" />
+    <meta name="author" content="SmartLight, INC. - Omaha, Nebraska" />
+    <title>Contact US - Quinns Reporting - Court Reporters, Legal Videos, and Trial Services - Omaha Nebraska</title>
 }
 
 @section Navigation
