--- a/Web/Views/Home/Services.cshtml
+++ b/Web/Views/Home/Services.cshtml
@@ -3,6 +3,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section HeadInfo
+{   
+    <meta name="viewport" content="width=device-width" />
+    <meta name="keywords" content="Court Reporting, Court Reporters, Legal Videos, Process Server" />
+    <meta name="description" content="Court Reporters, Legal Videographers and Trial Services" />    
+    <meta name="author" content="SmartLight, INC. - Omaha, Nebraska" />
+    <title>Services - Quinns Reporting - Court Reporters, Legal Videos, and Trial Services - Omaha Nebraska</title>
+}
+
 @section Navigation
 {
     @Html.Partial("_Navigation", "Services")
