--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -6,18 +6,12 @@
 <html class="no-js">
 <!--<![endif]-->
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Quinn's Reporting</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />@RenderSection("HeadInfo")
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    @Styles.Render("~/Content/Custom/base.css")
-    @Styles.Render("~/Content/Custom/grid.css")
-    @Styles.Render("~/Content/Custom/layout.css")
-    @Styles.Render("~/Content/Custom/validation.css")
+    @Styles.Render("~/Content/Custom/css")
     @Scripts.Render("~/Scripts/jquery/modernizr-2.6.2.min.js")
 
 </head>
@@ -40,7 +34,7 @@
             <div class="toolbar">
                 <div class="container">
                     <div class="sixteen columns">
-                        <div class="phone">Phone: <span class="white">402.895.5066</span> <span style="padding-left: 10px;">(8am - 5pm CST Mon-Fri)</span></div>
+                        <div class="phone">Phone: <span class="white">402.895.5066</span> <span class="time">(8am - 5pm CST Mon-Fri)</span></div>
                         <!--<div class="login">Welcome, <span class="white">Guest</span> <a href="javascript:void(0);">Login</a></div>-->
                     </div>
                 </div>
@@ -68,13 +62,11 @@
     @Html.Partial("_Footer");
     
     @Scripts.Render("~/Scripts/jquery/jquery-1.9.0.min.js")
-    @Scripts.Render("~/Scripts/jquery/jquery-ui-1.10.0.js")
-    @Scripts.Render("~/Scripts/jquery/jquery.quovolver.min.js")
+    @Scripts.Render("~/Scripts/jquery/jquery-ui-1.10.0.min.js")
     <script>window.jQuery || document.write('<script src="Scripts/jquery/jquery-1.9.0.min.js"><\/script>')</script>
     @Scripts.Render("~/Scripts/jquery/jquery.validate.min.js")
     @Scripts.Render("~/Scripts/jquery/jquery.validate.unobtrusive.min.js")
-    @Scripts.Render("~/Scripts/main.js")
-    @Scripts.Render("~/Scripts/plugins.js")
+    @Scripts.Render("~/bundles/js")
     @RenderSection("scripts", required: false)
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
